[gd_scene load_steps=26 format=2]

[ext_resource path="res://src/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://addons/godot-rollback-netcode/NetworkTimer.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://src/Player/HurtboxArea.gd" type="Script" id=4]
[ext_resource path="res://Idle.png" type="Texture" id=5]
[ext_resource path="res://addons/godot-rollback-netcode/NetworkAnimationPlayer.gd" type="Script" id=6]
[ext_resource path="res://Attack3.png" type="Texture" id=7]
[ext_resource path="res://Attack2.png" type="Texture" id=8]
[ext_resource path="res://Run.png" type="Texture" id=9]
[ext_resource path="res://Take Hit.png" type="Texture" id=10]
[ext_resource path="res://Death.png" type="Texture" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31.5, 31.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 33.5, 33.5 )

[sub_resource type="Animation" id=3]
resource_name = "IdleAnimation"
length = 0.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8, 9, 9 ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "PunchAnimation"
length = 0.45
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("PunchSprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("PunchSprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "KickAnimation"
length = 0.55
tracks/0/type = "value"
tracks/0/path = NodePath("KickSprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 5 ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("KickSprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=9]
resource_name = "MoveAnimation"
length = 0.4
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=11]
resource_name = "HitAnimation"
length = 0.5
step = 0.167
tracks/0/type = "value"
tracks/0/path = NodePath("HitSprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.167, 0.334 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 2 ]
}

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("HitSprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=13]
resource_name = "DeathAnimation"
length = 1.1
tracks/0/type = "value"
tracks/0/path = NodePath("DeathSprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ]
}

[sub_resource type="Animation" id=14]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("DeathSprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[node name="Player" type="KinematicBody2D" groups=["hurtbox", "network_sync"]]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, -0.5 )
scale = Vector2( 1.5, 1.5 )
shape = SubResource( 1 )
one_way_collision = true

[node name="HurtboxArea" type="Area2D" parent="."]
script = ExtResource( 4 )

[node name="HurtboxCollisionShape" type="CollisionShape2D" parent="HurtboxArea"]
position = Vector2( -0.5, -0.5 )
scale = Vector2( 1.5, 1.5 )
shape = SubResource( 2 )

[node name="HitstunTimer" type="Node" parent="."]
script = ExtResource( 2 )
wait_ticks = 60

[node name="BlockstunTimer" type="Node" parent="."]
script = ExtResource( 2 )
wait_ticks = 30

[node name="SlideTimer" type="Node" parent="."]
script = ExtResource( 2 )
wait_ticks = 5

[node name="IdleSprites" type="Sprite" parent="."]
scale = Vector2( 4, 4 )
texture = ExtResource( 5 )
hframes = 10

[node name="IdleAnimation" type="AnimationPlayer" parent="."]
root_node = NodePath("../IdleSprites")
anims/IdleAnimation = SubResource( 3 )
anims/RESET = SubResource( 4 )
script = ExtResource( 6 )

[node name="PunchSprites" type="Sprite" parent="."]
visible = false
scale = Vector2( 4, 4 )
texture = ExtResource( 7 )
hframes = 9

[node name="PunchAnimation" type="AnimationPlayer" parent="."]
anims/PunchAnimation = SubResource( 5 )
anims/RESET = SubResource( 6 )
script = ExtResource( 6 )

[node name="KickSprites" type="Sprite" parent="."]
visible = false
scale = Vector2( 4, 4 )
texture = ExtResource( 8 )
hframes = 6

[node name="KickAnimation" type="AnimationPlayer" parent="."]
anims/KickAnimation = SubResource( 7 )
anims/RESET = SubResource( 8 )
script = ExtResource( 6 )

[node name="MoveSprites" type="Sprite" parent="."]
visible = false
scale = Vector2( 4, 4 )
texture = ExtResource( 9 )
hframes = 8

[node name="MoveAnimation" type="AnimationPlayer" parent="."]
root_node = NodePath("../MoveSprites")
anims/MoveAnimation = SubResource( 9 )
anims/RESET = SubResource( 10 )
script = ExtResource( 6 )

[node name="HitSprites" type="Sprite" parent="."]
visible = false
scale = Vector2( 4, 4 )
texture = ExtResource( 10 )
hframes = 3

[node name="HitAnimation" type="AnimationPlayer" parent="."]
anims/HitAnimation = SubResource( 11 )
anims/RESET = SubResource( 12 )
script = ExtResource( 6 )

[node name="DeathSprites" type="Sprite" parent="."]
visible = false
scale = Vector2( 4, 4 )
texture = ExtResource( 11 )
hframes = 11

[node name="DeathAnimation" type="AnimationPlayer" parent="."]
anims/DeathAnimation = SubResource( 13 )
anims/RESET = SubResource( 14 )
script = ExtResource( 6 )

[connection signal="game_lost" from="." to="." method="_on_Player_game_lost"]
[connection signal="timeout" from="HitstunTimer" to="." method="_on_HitstunTimer_timeout"]
[connection signal="timeout" from="BlockstunTimer" to="." method="_on_BlockstunTimer_timeout"]
[connection signal="timeout" from="SlideTimer" to="." method="_on_SlideTimer_timeout"]
